Fix focus getting stuck in menu when XDG_CURRENT_DESKTOP ≠ kde

When XDG_CURRENT_DESKTOP ≠ kde, perssing and immediately releasing Alt
key makes focus get stuck in menu. Fix this by overriding QProxyStyle.

This does not influence menu accelerators (e.g. Alt+f to access "File" in
menu), which continue working according to user settings.

Signed-off-by: Konstantin Kharlamov <Hi-Angel@yandex.ru>

BUG: 410641
FIXED-IN: 19.08
Differential Revision: https://phabricator.kde.org/D22980

(cherry picked from commit 0107e68e22d3b70bb7bd7002e38d94f6e6e961ce)